[tool.poetry]
name = "drowsycoder_brain_games"
version = "0.6.0"
description = "The Brain Games project (Hexlet)"
repository = "https://github.com/drowsycoder/python-project-lvl1"
classifiers = ["Topic :: Games/Entertainment :: Puzzle Games"]
authors = ["drowsycoder <drowsycoon@gmail.com>"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.scripts]
brain-games = "brain_games.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.dependencies]
python = "^3.7"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
