[tool.poetry]
name = "hexlet-code"
version = "0.1.1"
repository = "https://github.com/drowsycoder/python-project-lvl1"
description = "The Brain Games project (Hexlet)"
classifiers = ["Topic :: Games/Entertainment :: Puzzle Games"]
authors = ["Paul K. <59116077+drowsycoder@users.noreply.github.com>"]
license = "BSD 3-Clause License"
packages = [
    { include = "brain_games" },
]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
mccabe = "^0.6.1"
pycodestyle = "^2.7.0"
pyflakes = "^2.3.1"
wemake-python-styleguide = "^0.15.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
